--- a/index.Rmd
+++ b/index.Rmd
@@ -115,11 +115,14 @@ All courts with its respective Monitors (12 staff members).
 
 ##### **BENIDORN CLIFF HIKE** 
 
-* **Starting time** 10h 
-* **Finishing time** 15h 
-* **Duration of the activity** 5 hours transfer included 
+* **Starting time** 09h 
+* **Finishing time** 13h 
+* **Duration of the activity** 4 hours  
 * **Level** easy/medium 
-* **Lunch** Package lunch 
+* **Lunch** Lunch not included
+* **Minimum** 20 pax
+* **Maximum** 30 pax
+* **Transfer** Not included
 
 Between **Benidorm and Albir** are the impressive cliffs of the **Sierra Helada Natural Park**.  If you a keen hiker, you can come with us: after picking you up at your hotel, we take you to the far end in Albir first and then lead you safely through the un-spoilt and abrupt tracks, all the way until the arrival at the Benidorm Cross. The Mediterranean is far below you on one side and the Benidorm Valley at your feet on the other side. For this 4.5 hours medium level hike you will need good hiking shoes and a rucksack if possible. At departure you will get a packed lunch from the hotel. 
 
@@ -132,10 +135,13 @@ Between **Benidorm and Albir** are the impressive cliffs of the **Sierra Helada 
 ##### **HIKING IN THE MOUNTAINS** 
 
 * **Starting time** 09h 
-* **Finishing time** 14h 
-* **Duration of the activity** 5 hours transfer included 
+* **Finishing time** 13h 
+* **Duration of the activity** 4 hours 
 * **Level** medium/advanced
-* **Lunch** Package lunch
+* **Lunch** Not included
+* **Minimum** 20 pax
+* **Maximum** 55 pax
+* **Transfer** Not included
 
 You’ll be absolutely surprised of the beauty of the close inland of this area if you come on this walking trip. This **half day excursion** will make you breath and smell the fresh and pure **Spanish nature**: dense pine forests, the blossoms of the fruit plantations and a variety of aromatic herbs. Add some sensational views to this and you’ve got an experience you’ll never forget!
 At departure you will get a packed lunch from the hotel. 
@@ -147,11 +153,14 @@ At departure you will get a packed lunch from the hotel.
 
 ##### **BIKE TOUR AROUND BENIDORM AREA** 
 
-* **Starting time** 08.30h 
-* **Finishing time**  
-* **Duration of the activity**
+* **Starting time** 09h 
+* **Finishing time**  TBC
+* **Duration of the activity** TBC
 * **Level** easy / medium 
-* **Lunch** not included 
+* **Lunch** Not included 
+* **Minimum** TBC
+* **Maximum** TBC
+* **Transfer** TBC
 
 
 <img src = "https://www.excursionesbenidorm.com/images/stories/excu_aventuras/Downhill_Bike_Ride/Gallery/Benidorm-Downhill-Bike-Ride4.JPG">
@@ -161,11 +170,14 @@ At departure you will get a packed lunch from the hotel.
 
 ##### **MOUNTAIN BIKE TOUR IN THE MOUNTAINS** 
 
-* **Starting time** 08h 
-* **Finishing time**  
-* **Duration of the activity** 
+* **Starting time** 09h 
+* **Finishing time** 13h 
+* **Duration of the activity** 4 hours
 * **Level** advanced
 * **Lunch** not included 
+* **Minimum** 7 pax
+* **Maximum** 15 pax
+* **Transfer** No needed (TBC)
 
 A tough 20 km off-road ride through the rough Costa Blanca countryside. This is a trip for bike lovers and all-round sporty people. 
 
@@ -176,11 +188,14 @@ A tough 20 km off-road ride through the rough Costa Blanca countryside. This is 
 
 ##### **DOWN-HILL BIKE RIDE** 
 
-* **Starting time**  
-* **Finishing time**  
-* **Duration of the activity** 
+* **Starting time** 09h 
+* **Finishing time** 16h
+* **Duration of the activity** 7 hours
 * **Level** easy / medium
 * **Lunch** not included 
+* **Minimum** 10 pax
+* **Maximum** 24 pax
+* **Transfers** included
 
 This is an experience you will never forget. You will be taken to the **highest mountain of the Costa Blanca: Aitana (1.600 metros)**. Where once at the top you will be given a **bicycle** and you can start your **descend, approx. 35km all downhill on tarmac roads** passing some spectacular villages, fruit plantations and fantastic views until you reach the town of Orxeta. There will also be various stops along the way where your guide will explain all about the areas you are passing and where you will stop to eat or have a drink.
 
@@ -193,17 +208,25 @@ This is an experience you will never forget. You will be taken to the **highest 
 ##### **GUIDED TOUR GUADALEST & ALTEA** 
 
 **Option 1** 
-* **Starting time** 09,30h 
+
+* **Starting time** 09:30h 
 * **Finishing time**14,30h  
 * **Duration of the activity** 5 hours
 * **Lunch** included 
+* **Minimum** 20 pax
+* **Maximum** 55 pax
+* **Transfer** included
 
 
 **Option 2** 
+
 * **Starting time** 14,30h 
 * **Finishing time**18,30h  
 * **Duration of the activity** 4 hours
-* **Lunch** not included
+* **Lunch** not included but stop for a drink
+* **Minimum** 20 pax
+* **Maximum** 55 pax
+* **Transfer** included
 
 **Guadalest** is a pretty and historic village sitting on top of a mountain around 30 min drive from Benidorm. It is one of **the most visited attractions** on the Costa Blanca. The village appears perched on a tiny pinnacle rising into the sky which makes it look amazing. This gives beautiful views of the green valley with many other mountains in the background.  Bus and English speaking guide will pick you up at the hotel and take you on a journey through the bountiful valleys & mountains of medlar fruit trees. Once in Guadalest your guide will take you around the most relevant sites in town. 
 
