--- a/index.Rmd
+++ b/index.Rmd
@@ -160,7 +160,7 @@ At departure you will get a packed lunch from the hotel.
 * **Lunch** Not included 
 * **Minimum** TBC
 * **Maximum** TBC
-* **Transfer** TBC
+* **Transfer** No needed (TBC)
 
 
 <img src = "https://www.excursionesbenidorm.com/images/stories/excu_aventuras/Downhill_Bike_Ride/Gallery/Benidorm-Downhill-Bike-Ride4.JPG">
