--- a/index.Rmd
+++ b/index.Rmd
@@ -160,7 +160,7 @@ At departure you will get a packed lunch from the hotel.
 * **Lunch** Not included 
 * **Minimum** TBC
 * **Maximum** TBC
-* **Transfer** No needed (TBC)
+* **Transfer** No needed 
 
 
 <img src = "https://www.excursionesbenidorm.com/images/stories/excu_aventuras/Downhill_Bike_Ride/Gallery/Benidorm-Downhill-Bike-Ride4.JPG">
@@ -177,7 +177,7 @@ At departure you will get a packed lunch from the hotel.
 * **Lunch** not included 
 * **Minimum** 7 pax
 * **Maximum** 15 pax
-* **Transfer** No needed (TBC)
+* **Transfer** No needed 
 
 A tough 20 km off-road ride through the rough Costa Blanca countryside. This is a trip for bike lovers and all-round sporty people. 
 
