--- a/index.Rmd
+++ b/index.Rmd
@@ -154,12 +154,12 @@ At departure you will get a packed lunch from the hotel.
 ##### **BIKE TOUR AROUND BENIDORM AREA** 
 
 * **Starting time** 09h 
-* **Finishing time**  TBC
-* **Duration of the activity** TBC
+* **Finishing time**  13h
+* **Duration of the activity** 4h
 * **Level** easy / medium 
 * **Lunch** Not included 
-* **Minimum** TBC
-* **Maximum** TBC
+* **Minimum** 7 pax
+* **Maximum** 12 pax
 * **Transfer** No needed 
 
 
